// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multibanco methods Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "multibanco",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`Multibanco methods Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "3BEB1B96CE7E4ECBB68EE44BDDE7FD6F",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "multibanco",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
